  [Michele Simionato]
  * Optimized the postclassical phase
  * Fixed a serious issue in the classical calculator with tiles
  * Vectorized the association assets <-> hazard sites (up to 32x speedup)
  * Fixed bug in disaggregation calculations associated to an error
    in the line `[mag] = np.unique(np.round(ctx.mag, 6))`
  * Optimized the calculation of geohashes by using numba

  [Paolo Tormene]
  * Extended total_losses to include business_interruption

  [Michele Simionato]
  * Recognized `occupants_avg` field in the exposure
  * Optimized reading the exposure (both speed and memory)
  * Optimized the rupture sampling for MultiFaultSources and improved
    the parallelization for MultiFaultSources and MultiPointSources
  * Made the parameter `truncation_level` mandatory
  * Fixed the damage state header in the aggrisk outputs
  * Changed the order of the IMTs to be by period and not lexicographic
  * Fixed the realizations extractor for scenario calculations reading
    ruptures with multiple different tectonic region types

  [Kendra Johnson]
  * Fixed a bug in disaggregation by Lon-Lat-TRT when there are multifault
    ruptures and multiple sites

  [Michele Simionato]
  * Deprecated the <area> conversion in the exposure
  * Added new loss types "area" and "number" for usage in risk calculations
  * Made the contexts immutable and fixed mutability bugs potentially
    affecting the modules akkar_bommer_2010, bindi_2011_ipe, can_shm6_inslab,
    lanzano_2019, youd_etal_2002, zhang_zhao_2005, cauzzi_faccioli_2008_swiss,
    chiou_youngs_2008_swiss campbell_bozorgnia_2014
  * Changed the disaggregation algorithm (see manual)
  * Added a view `risk_by_rup`
  * Internal: added command `oq compare med_gmv <imt>`
  * Extended extract/ruptures to extract a single rupture given the `rup_id`
  * Fixed a bug in classical_damage causing a ValueError: could not broadcast
    input array from shape (X,Y) into shape (X,)
  * Added check for missing site parameters
