@@ -1,25 +1,0 @@
-#,,,,"generated_by='OpenQuake engine 3.17.0-git0e90046862', start_date='2023-04-28T09:28:00', checksum=2967670219"
-site_id,event_id,gmv_PGA,gmv_SA(0.2),gmv_SA(1.0)
-0,0,2.06450E-04,3.87009E-03,3.35712E-04
-2,0,3.30561E-04,2.51425E-03,8.15314E-04
-1,3,1.15296E-04,2.03736E-03,6.72311E-04
-0,4,9.48708E-04,2.10768E-03,9.98356E-04
-1,4,2.20169E-04,3.89846E-03,1.29141E-03
-0,6,5.96517E-04,3.62170E-03,2.36516E-03
-2,6,4.18390E-04,3.03517E-03,4.39811E-03
-1,8,8.36097E-04,1.66991E-03,2.53951E-03
-2,8,3.05650E-04,2.42215E-03,3.71735E-04
-0,9,6.41561E-04,2.33840E-03,1.11328E-03
-0,10,1.05920E-03,1.62636E-02,9.46490E-03
-1,10,4.82938E-04,8.46130E-03,1.27988E-02
-2,10,5.70885E-04,5.07864E-03,2.53374E-03
-2,11,5.47011E-04,2.78334E-03,1.45671E-03
-0,13,6.79408E-04,3.90302E-03,2.67884E-03
-1,13,1.64835E-03,1.30167E-02,1.32691E-03
-2,13,1.36018E-03,6.46718E-03,1.98242E-03
-0,14,3.14952E-03,1.35580E-02,8.93645E-03
-1,14,4.38993E-03,4.78922E-03,4.89812E-03
-2,14,3.18521E-03,9.91044E-03,4.89977E-03
-0,15,1.26588E-03,4.13452E-03,6.82478E-03
-1,15,1.89550E-03,5.94968E-03,9.46468E-03
-2,15,1.51395E-03,2.47516E-03,4.28152E-03
