@@ -1,0 +1,30 @@
+#,,,,,,,,,"generated_by='OpenQuake engine 3.17.0-git18bc3054a5', start_date='2023-06-02T07:31:34', checksum=3051445430, investigation_time=1.0, ses_per_logic_tree_path=1"
+rup_id,multiplicity,mag,centroid_lon,centroid_lat,centroid_depth,trt,strike,dip,rake
+0,3,4.850000E+00,-1.244300E+02,5.165000E+01,1.000000E+01,Active Shallow Crust,0.000000E+00,9.000000E+01,0.000000E+00
+1,5,4.850000E+00,-1.244300E+02,5.165000E+01,5.000000E+00,Active Shallow Crust,0.000000E+00,9.000000E+01,0.000000E+00
+2,2,4.850000E+00,-1.244300E+02,5.165000E+01,1.500000E+01,Active Shallow Crust,0.000000E+00,9.000000E+01,0.000000E+00
+3,3,4.950000E+00,-1.244300E+02,5.165000E+01,1.000000E+01,Active Shallow Crust,0.000000E+00,9.000000E+01,0.000000E+00
+4,5,4.950000E+00,-1.244300E+02,5.165000E+01,5.000000E+00,Active Shallow Crust,0.000000E+00,9.000000E+01,0.000000E+00
+5,3,4.950000E+00,-1.244300E+02,5.165000E+01,1.500000E+01,Active Shallow Crust,0.000000E+00,9.000000E+01,0.000000E+00
+6,2,5.050000E+00,-1.244300E+02,5.165000E+01,1.000000E+01,Active Shallow Crust,0.000000E+00,9.000000E+01,0.000000E+00
+8,1,5.050000E+00,-1.244300E+02,5.165000E+01,1.500000E+01,Active Shallow Crust,0.000000E+00,9.000000E+01,0.000000E+00
+9,1,5.150000E+00,-1.244300E+02,5.165000E+01,1.000000E+01,Active Shallow Crust,0.000000E+00,9.000000E+01,0.000000E+00
+11,1,5.150000E+00,-1.244300E+02,5.165000E+01,1.500000E+01,Active Shallow Crust,0.000000E+00,9.000000E+01,0.000000E+00
+12,1,5.250000E+00,-1.244300E+02,5.165000E+01,1.000000E+01,Active Shallow Crust,0.000000E+00,9.000000E+01,0.000000E+00
+13,1,5.250000E+00,-1.244300E+02,5.165000E+01,5.000000E+00,Active Shallow Crust,0.000000E+00,9.000000E+01,0.000000E+00
+14,1,5.250000E+00,-1.244300E+02,5.165000E+01,1.500000E+01,Active Shallow Crust,0.000000E+00,9.000000E+01,0.000000E+00
+16,2,5.350000E+00,-1.244300E+02,5.165000E+01,5.000000E+00,Active Shallow Crust,0.000000E+00,9.000000E+01,0.000000E+00
+17,1,5.350000E+00,-1.244300E+02,5.165000E+01,1.500000E+01,Active Shallow Crust,0.000000E+00,9.000000E+01,0.000000E+00
+24,3,5.650000E+00,-1.244300E+02,5.165000E+01,1.000000E+01,Active Shallow Crust,0.000000E+00,9.000000E+01,0.000000E+00
+28,1,5.750000E+00,-1.244300E+02,5.165000E+01,5.000000E+00,Active Shallow Crust,0.000000E+00,9.000000E+01,0.000000E+00
+30,1,5.850000E+00,-1.244300E+02,5.165000E+01,1.000000E+01,Active Shallow Crust,0.000000E+00,9.000000E+01,0.000000E+00
+31,2,5.850000E+00,-1.244300E+02,5.165000E+01,5.000000E+00,Active Shallow Crust,0.000000E+00,9.000000E+01,0.000000E+00
+33,2,5.950000E+00,-1.244300E+02,5.165000E+01,1.000000E+01,Active Shallow Crust,0.000000E+00,9.000000E+01,0.000000E+00
+34,1,5.950000E+00,-1.244300E+02,5.165000E+01,5.000000E+00,Active Shallow Crust,0.000000E+00,9.000000E+01,0.000000E+00
+37,1,6.050000E+00,-1.244300E+02,5.165000E+01,5.000000E+00,Active Shallow Crust,0.000000E+00,9.000000E+01,0.000000E+00
+39,1,6.150000E+00,-1.244300E+02,5.165000E+01,1.000000E+01,Active Shallow Crust,0.000000E+00,9.000000E+01,0.000000E+00
+42,1,6.250000E+00,-1.244300E+02,5.165000E+01,1.000000E+01,Active Shallow Crust,0.000000E+00,9.000000E+01,0.000000E+00
+45,1,6.350000E+00,-1.244300E+02,5.165000E+01,1.000000E+01,Active Shallow Crust,0.000000E+00,9.000000E+01,0.000000E+00
+48,1,6.450000E+00,-1.244300E+02,5.165000E+01,1.000000E+01,Active Shallow Crust,0.000000E+00,9.000000E+01,0.000000E+00
+58,2,6.750000E+00,-1.244300E+02,5.165000E+01,5.000000E+00,Active Shallow Crust,0.000000E+00,9.000000E+01,0.000000E+00
+63,1,6.950000E+00,-1.244300E+02,5.165000E+01,1.000000E+01,Active Shallow Crust,0.000000E+00,9.000000E+01,0.000000E+00
