@@ -1,0 +1,28 @@
+[general]
+
+description = Exporting ruptures for Canada
+calculation_mode = event_based
+
+[logic_tree]
+
+number_of_logic_tree_samples = 1000
+
+[erf]
+rupture_mesh_spacing = 5.
+width_of_mfd_bin = 0.1
+area_source_discretization = 50.0
+
+[site_params]
+reference_vs30_type = measured
+reference_vs30_value = 400.0
+reference_depth_to_2pt5km_per_sec = 2.0
+reference_depth_to_1pt0km_per_sec = 40.0
+
+[calculation]
+
+source_model_logic_tree_file = source_model_logic_tree.xml
+gsim_logic_tree_file = nbc_asc_logic_tree.xml
+investigation_time = 1.0
+truncation_level = 3
+maximum_distance = 400.0
+ground_motion_fields = false
