@@ -1,0 +1,18 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<nrml xmlns:gml="http://www.opengis.net/gml"
+      xmlns="http://openquake.org/xmlns/nrml/0.4">
+  <logicTree logicTreeID="lt1">
+    <logicTreeBranchingLevel branchingLevelID="bl1">
+      <logicTreeBranchSet uncertaintyType="gmpeModel" branchSetID="bs1"
+                          applyToTectonicRegionType="Active Shallow Crust">
+        <logicTreeBranch branchID="b11">
+          <uncertaintyModel>
+            [GMPETable]
+            gmpe_table = "./Wcrust_low_rhypo.hdf5"
+          </uncertaintyModel>
+          <uncertaintyWeight>1</uncertaintyWeight>
+        </logicTreeBranch>
+      </logicTreeBranchSet>
+    </logicTreeBranchingLevel>
+  </logicTree>
+</nrml>
