@@ -1,4 +1,5 @@
   [Michele Simionato]
+  * Fixed the rupture exporter in presence of GMPETables
   * Optimized the postclassical phase
   * Fixed a serious issue in the classical calculator with tiles
   * Vectorized the association assets <-> hazard sites (up to 32x speedup)
